--- a/index.html
+++ b/index.html
@@ -4,20 +4,33 @@
 	<title>About Me</title>
 
 	<link rel="stylesheet" type="text/css" href="main.css">
+
+
+	<meta name="description" content="This is a sample web-page describing.">
+</head>
 </head>
 <body>
 	<div>
-  <h1>Aashish Adhikari</h1>
-  <p>I'm an aspiring full stack web developer. I love cats, coding, and crocheting.</p>
-  <h2>Skills</h2>
-  <ul>
-       <li>HTML</li>
-       <li>CSS</li>
-       <li>JavaScript</li>
-       <li>jQuery</li>
-  </ul>
-  <h2>Contact Info</h2>
-  <p>Twitter: <a href="https://twitter.com/sallyStudent">@asis.adh</a></p>
-</div>
+	  <h1>Aashish Adhikari</h1>
+	  <p>I'm an aspiring full stack web developer. I love cats, coding, and crocheting.</p>
+	  <h2>Skills</h2>
+	  <ul>
+	       <li>HTML</li>
+	       <li>CSS</li>
+	       <li>JavaScript</li>
+	       <li>jQuery</li>
+	  </ul>
+	  <section>.
+		  <h2>Contact Info</h2>
+		  <ul>
+				<li>Aashish Adhikari</li>
+				<li>asis.adh@gmail.com</li>
+				<li>+9779846012345</li>
+				<li>Twitter: <a href="https://twitter.com/sallyStudent">@asis.adh</a></li>
+				<li><img src="image.jpg" alt="image missing"></li>
+			</ul>
+		</section>
+	
+	</div>
 </body>
 </html>
